Fixed images that were stretched

--- a/client/src/css/All.css
+++ b/client/src/css/All.css
@@ -54,3 +54,7 @@ a.no-red-bar::after {
 .no-overflow {
   overflow-x: hidden !important;
 }
+
+.gallery-image {
+  object-fit: cover;
+}
